fix horizontal scroll on contraints panel

--- a/src/interface/src/app/plan/create-scenarios/constraints-panel/constraints-panel.component.scss
+++ b/src/interface/src/app/plan/create-scenarios/constraints-panel/constraints-panel.component.scss
@@ -93,7 +93,6 @@
   bottom: -6px;
   left: 0;
   width: 100%;
-  padding: 0 10px;
   text-align: center;
   color: $color-dark-gray;
 
